# 3GPP-RAG

./: .env.example  .gitignore  AGENTS.md  README.md  ROADMAP.md  pyproject.toml
app/: __init__.py  _render.py  streamlit_app.py
data/eval/: facts_eval.md  gate_eval.md  jina_eval.md  last_eval.md  md_ab_eval.md  pdf_ab_eval.md  test_questions.yaml
scripts/: answer.py  backup.py  chunk_sections.py  embed_chunks.py  evaluate.py  evaluate_facts.py  extract_facts.py  ingest_md.py  ingest_toc.py  init_db.py
spike/: extracted_62.json  extracted_63.json  last_run_62.json  last_run_63.json  questions.yaml  quick_rag.py  reality_check.md
src/: config.py  models.py  source_formats.py
src/facts/: __init__.py  _grid.py  _tokens.py  emit.py  extractor.py  search.py
src/generation/: __init__.py  answer.py  prompt.py  providers.py
src/ingestion/: __init__.py  _artifact_cleaner.py  _base.py  _filename_parser.py  _heading_parser.py  _sanity_gate.py  _table_parser.py  chunker.py  embedder.py  md_parser.py  (+1 more)
tests/: test_app_render.py  test_app_smoke.py  test_artifact_cleaner.py  test_chunker.py  test_dense_retrieval.py  test_e2e_week1.py  test_evaluate_facts.py  test_evaluate_metrics.py  test_facts_emit.py  test_facts_extractor.py  test_facts_grid.py  test_facts_search.py  test_facts_tokens.py  test_filename_parser.py  test_gate.py  test_generation.py  test_heading_parser.py  test_hybrid_retrieval.py  test_md_emit.py  test_md_parser_parse.py  test_question_bank.py  test_rerank.py  test_sanity_gate.py  test_sparse_retrieval.py  test_table_parser.py  test_toc_extractor.py
(+13 files in other folders)
