[project]
name = "3gpp-rag"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.8",
    "pymupdf>=1.27.2.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
